[tool.poetry]
name = "flask-restful-tuto"
version = "0.1.0"
description = ""
authors = ["Arthur Nunes <arthurnunesc@proton.me>"]
readme = "README.md"
packages = [{include = "flask_restful_tuto"}]

[tool.poetry.dependencies]
python = "3.10.10"
Flask = "^2.2.3"
Flask-RESTful = "^0.3.9"
pony = "^0.7.16"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
